shesmu-server/src/test/resources/bad/non-stream-aggregate.shesmu
Input gsi_std;

Define foo(string s)
	Group a = accession By s;
